@@ -16,6 +16,14 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2017-03-09 13:31 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r452)
+  * hbqt/qtgui/hbqtgui.ch
+    + Added: QSqlTableModel_* constants.
+	
+  * hbqtwidgets/loggraphics.ui
+  * hbqtwidgets/parselogs.prg
+    + Added: more features.
+
 2017-03-05 13:07 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r451)
   * hbqt/qtgui/qth/QImage.qth
     + Added: methods introduced in later versions of Qt.
